# COMMICS

cgi-bin/commics/CDA/: cda.cgi
cgi-bin/commics/CLUSTER/: cluster.cgi  compclusteringengine.pm  zoom.cgi
cgi-bin/commics/DATAINPUT/: DataParser.pm  dataInput.cgi  generateData.cgi
cgi-bin/commics/PROFILE/: paintBarplot.cgi  selectedMetagenomes.cgi
images_generator/: CMakeLists.txt  README  compclusteringengine.cpp  compclusteringengine.h  compclusteringengine.i  prueba.pl
www/commics/: index.html
www/commics/CDA/: index.html
www/commics/CDA/js/: cda.js
www/commics/CLUSTER/: index.html
www/commics/DATAINPUT/: index.html
www/commics/DATAINPUT/css/: common.css  header.css  table.css
www/commics/DATAINPUT/js/: Event.js  SortedTable.js  SortedTable.js.backup  dataInputJs.js
www/commics/PROFILE/: index.html
www/commics/PROFILE/js/: profile.js
www/commics/javascripts/: comp_basic.js
www/commics/javascripts/cropper/: cropper.css  cropper.js  cropper.uncompressed.js
